--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
 
       - name: Setup deno
         uses: denolib/setup-deno@v2
         with:
-          deno-version: v1.7.0
+          deno-version: v1.38.3
 
       - name: Build gh-pages
         run: |
@@ -27,4 +27,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          cname: ai3.ro
+          cname: www.ai3.ro
